glibc (2.23-0experimental4) UNRELEASED; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * debian/rules.d/build.mk: allow a test to fail without having a .out
    file.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Jun 2016 12:45:35 +0200

glibc (2.23-0experimental3) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - debian/patches/hurd-i386/tg-hurdsig-fixes-2.diff: refresh.
    - debian/patches/hurd-i386/cvs-libpthread.so.diff: drop, upstreamed.
    - debian/patches/mips/submitted-vfork.diff: drop, upstreamed.
    - debian/patches/sparc/submitted-vfork.diff: drop, upstreamed.
  * debian/rules.d/build.mk: reduce TIMEOUTFACTOR to 15 from 50. That
    corresponds to a 5 minutes default, which should be more than enough even
    on slow architectures.
  * debian/sysdeps/mips64el.mk: change the ISA back to MIPS3 to fix math FMA
    tests on some CPUs.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Jun 2016 00:48:51 +0200

glibc (2.23-0experimental2) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * patches/kfreebsd/local-fbtl.diff: update to revision 5973 (from
    glibc-bsd).
  * debian/rules, debian/rules.d/build.mk: rename localedir into complocaledir
    following upstream change.
  * debian/patches/local-allocalim-header.diff: drop, obsolete.
  * debian/patches/any/local-no-pagesize.diff: drop, obsolete.

  [ Adam Conrad ]
  * debian/testsuite-xfail-debian.mk: Also allow tst-malloc-thread-fail to
    fail where we've already done so for test-xfail-tst-malloc-thread-exit.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Apr 2016 14:20:30 +0200

glibc (2.23-0experimental1) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.