@@ -3613,20 +3613,20 @@
 +
 +
 +/* Structure large enough to hold any socket address (with the historical
-+   exception of AF_UNIX).  We reserve 128 bytes.  */
++   exception of AF_UNIX).  */
 +#if ULONG_MAX > 0xffffffff
 +# define __ss_aligntype	__uint64_t
 +#else
 +# define __ss_aligntype	__uint32_t
 +#endif
-+#define _SS_SIZE	128
-+#define _SS_PADSIZE	(_SS_SIZE - (2 * sizeof (__ss_aligntype)))
++#define _SS_PADSIZE \
++  (_SS_SIZE - __SOCKADDR_COMMON_SIZE - sizeof (__ss_aligntype))
 +
 +struct sockaddr_storage
 +  {
 +    __SOCKADDR_COMMON (ss_);	/* Address family, etc.  */
-+    __ss_aligntype __ss_align;	/* Force desired alignment.  */
 +    char __ss_padding[_SS_PADSIZE];
++    __ss_aligntype __ss_align;	/* Force desired alignment.  */
 +  };
 +
 +
