@@ -4,6 +4,8 @@ glibc (2.23-0experimental4) UNRELEASED; urgency=medium
   * debian/patches/git-updates.diff: update from upstream stable branch.
   * debian/rules.d/build.mk: allow a test to fail without having a .out
     file.
+  * patches/kfreebsd/local-sysdeps.diff: update to revision 6075 (from
+    glibc-bsd).
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Jun 2016 12:45:35 +0200
 
